--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_student.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_student.html
@@ -26,7 +26,8 @@
 
 </style>
 <script>
-var studentsArray = queryXML();
+var studentsArray = new Array();
+studentsArray = queryXML();
 
 </script>
 
