--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevStudent.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevStudent.html
@@ -239,7 +239,7 @@ function End(studentGrades)
 	//myselect.add(new Option("Homework", "Homework"));
 	//myselect
 </script>
-<div id="container" style="width: 900px; height: 600px; margin: 0 auto; border-bottom: solid gray 1px"></div>
+<div id="container" style="width: 900px; height: 600px; margin: 0 auto; border-bottom: none"></div>
 
 	</body>
 </html>
