--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_student.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_student.html
@@ -40,6 +40,7 @@ studentsArray = queryXML();
     <!-- START INTRO -->
   <br />
   <br />
+  <!--
   <div class="row">
   <a onclick="takeSeat('K1', studentsArray);
       	Mt.App.fireEvent('seatCheck', { 
@@ -162,7 +163,8 @@ studentsArray = queryXML();
     </div>
         </a>
     
-  </div><!-- end .row -->
+  </div> -->
+  <!---
    <div class="row">
   
       <a onclick="takeSeat('J1', studentsArray);
@@ -286,7 +288,7 @@ studentsArray = queryXML();
     </div>
    </a>
     
-  </div><!-- end .row -->
+  </div> -->
  <div class="row">
   
     <a onclick="takeSeat('I1', studentsArray);
