--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/studio_student.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/studio_student.html
@@ -51,7 +51,7 @@ studentsArray = queryXML();
     
 
   <div class="row">
-    <div class="grid_16 intro">
+    <div class="grid_16 intro" style="font-size: 16px;">
 <center> Please select a seat. </center>
     </div>
     
@@ -1538,7 +1538,7 @@ studentsArray = queryXML();
     </div>
       <a onclick="takeStudioSeat('I2', studentsArray);
       	Mt.App.fireEvent('seatCheck', { 
-		    selectedSeat: 'i2'});" style="none"><! 15 >
+		    selectedSeat: 'I2'});" style="none"><! 15 >
     <div id="I2" class="grid_1"><style onload="seatTakenColor('I2', studentsArray);"></style>
       <p><script>seatTakenName('I2', studentsArray); </script> </p>
     </div>
