--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevGroupStudio.htm
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevGroupStudio.htm
@@ -6,7 +6,7 @@
 	</select>
 	<select id="students" style="font-size: medium;" onchange="javascript:location.href=this.value"> <!--will update the graph -->
 	</select>
-	<a href="..\studio_group.html" style='border: 1px solid black; background:#C0C0C0; font-family:Arial,Helvetica,sans-serif; font-size: large; padding: 2px; color: black; text-decoration: none;'>Go Back</a>
+	<a href="..\studio_group.html" style='border:2px solid #a1a1a1; padding:5px 10px; text-align: center; width: 100px; background:#dddddd; border-radius:25px; text-decoration: none; color: black;  font-family:Arial,Helvetica,sans-serif;'>Go Back</a>
 </form>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -14,42 +14,31 @@
 		<script type="text/javascript" src="graphFunctions.js"></script>
 		<script type="text/javascript">	
 	/* ===== QUERY THE GRADE SHEET AND GET ALL STUDENTS GRADES ======= */	
-	//alert('Next, it should query for grades');
 	var getGrades = GetGrades();
-	//alert('Congrats!! You queried grades!!');
-	//alert('Next, you should query assignments!');
 	var getAssignments = GetAssignment();
-	//alert('CONGRATS!!!!!!!!!!!!! YOU QUERIED ASSIGNMENTS!!!!!!');
 	/* ===== END OF QUERYING ==========================================*/
 	
 	/* ========= GET ALL THE CATEGORIES TO MAKE INTO THE MENU ============ */
 	var myselect = document.getElementById("sample");
 	var studentselect = document.getElementById("students");
 	var categoryArray = new Array();
-	//alert('it gets here, next it should query for categories');
 	categoryArray = GetCategory();
-	//alert('if it queried here, it should be getting categories');
-	//alert(categoryArray);
 	/* ===================================================================== */
 	
 	/* ========= GET THE PATH NAME ============ */
-	var url1 = document.URL;
-	var path_pre = url1.split("?cat="); //remove the category from the url
-	var path = path_pre[0]; //this is for the category
+	var the_url = document.URL;
+	var path = getRawURL(the_url);
 	/* ===================================================================== */
 	
 	/* ====== THIS SECTION SPLITS THE URL TO GET THE ARRAY OF STUDENT IDS TO COMPARE ====== */
-	var newarray = document.URL;
-	var array1=newarray.split('group=');
-	var temp = array1[1];
-	//alert(temp);
-	var studentIDarray = temp.split(',');
-	//alert(studentIDarray[1]);
+	var tempStudents = getGroupFromURL(the_url);
+	var studentIDarray = tempStudents.split(',');
 	/* ===== END OF SPLIT ARRAY ===== */
 
 /* ===== END OF SPLIT ARRAY ===== */
 	
-	var category = getCategoryID();	 //get the category ID from the URL
+	//var category = getCategoryID();	 //get the category ID from the URL
+	var category = getCatFromURL(the_url);
 	if (category > categoryArray.length)
 	{
 		categoryname = 'Overall';
@@ -59,28 +48,22 @@
 	}
 	
 	/* ====== CALCULATE GROUPS ====== */
-	//var plotit = calculateGroups(studentIDarray, categoryname, getGrades, getAssignments);
-	//alert(plotit.nameArray);
-	
-	student_URL = document.URL;
-	student_URL_2 = student_URL.split("?student=");
+	var student_url_id = getStudentIDURL(the_url);
 	
 	for (i = 0; i < categoryArray.length; i++) //will create the drop down based on the amount of categories that there are
 	{
-		//alert(catID);
 		if (i == category){ //if it's the category that's selected in the URL
-			//var url='standardDev.htm?cat=' + i;
-			url = path + '?cat=' + i;
+			url = path + '?group=' + tempStudents + '?cat=' + i + '?student=' + student_url_id;
 			myselect.add(new Option(categoryArray[i].name, url, true, true));	}
 		else
 		{
 			//var url='standardDev.htm?cat=' + i;
-			url = path + '?cat=' + i;
+			url = path + '?group=' + tempStudents +'?cat=' + i + '?student=' + student_url_id;
 			myselect.add(new Option(categoryArray[i].name, url));
 		}
 	}
 	var nextoption = categoryArray.length + 1;
-	url = path + '?cat=' + nextoption;
+	url = path + '?group=' + tempStudents + '?cat=' + nextoption + '?student=' + student_url_id;
 	//======= ADDS THE OVERALL OPTION TO THE MENU AND DEFAULTS IT IF THE CATEGORY MENU IS THAT OF OVERALL
 	if (category == nextoption){
 	myselect.add(new Option('Overall', url, true, true));
@@ -105,7 +88,7 @@
 		}
 	}
 /* ================== CREATE DROPDOWN FOR WHICH STUDENT'S INFORMATION TO DISPLAY ============================ */
-	student_url_id = getStudentID();
+	var student_url_id = getStudentIDURL(the_url);
 	student_URL = document.URL;
 	student_URL_2 = student_URL.split("?student=");
 	
@@ -118,20 +101,17 @@
 		//alert(catID);
 		if (i == student_url_id){ //if it's the category that's selected in the URL
 			//var url='standardDev.htm?cat=' + i;
-			url = student_URL_2[0] + '?student=' + i;
+			url = path + '?group=' + tempStudents + '?cat=' + category + '?student=' + i;
 			studentselect.add(new Option(studentnames[i], url, true, true));	}
 		else
 		{
 			//var url='standardDev.htm?cat=' + i;
-			url = student_URL_2[0] + '?student=' + i;
+			url = path + '?group=' + tempStudents + '?cat=' + category + '?student=' + i;
 			studentselect.add(new Option(studentnames[i], url));
 		}
 	}
 
-	//alert(myselect.options[myselect.selectedIndex].value);	
 /* ================== CREATE DROPDOWN FOR WHICH STUDENT'S INFORMATION TO DISPLAY ============================ */
-	
-//alert(categoryname);
 
 $(function () {
 	
@@ -323,7 +303,7 @@ function End(studentGrades)
 	//myselect.add(new Option("Homework", "Homework"));
 	//myselect
 </script>
-<div id="container" style="width: 900px; height: 600px; margin: 0 auto; border-bottom: solid gray 1px"></div>
+<div id="container" style="width: 900px; height: 600px; margin: 0 auto;"></div>
 
 
 	</body>
