--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevStudio.htm
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevStudio.htm
@@ -5,7 +5,7 @@
 	<form id="somform">
 	<select id="sample" style="font-size: medium;" onchange="javascript:location.href=this.value"> <!--will update the graph -->
 	</select>
-	<a href="..\studio.html" style='border: 1px solid black; background:#C0C0C0; font-family:Arial,Helvetica,sans-serif; font-size: large; padding: 2px; color: black; text-decoration: none;'>Go Back</a>
+	<a href="..\studio.html" style='border:2px solid #a1a1a1; padding:5px 10px; text-align: center; width: 100px; background:#dddddd; border-radius:25px; text-decoration: none; color: black;  font-family:Arial,Helvetica,sans-serif;'>Go Back</a>
 </form>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
