--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/studio_group.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/studio_group.html
@@ -102,7 +102,7 @@ grades = GetGrades();
 <div class="container_16">
     <!-- START INTRO -->
   <div class="row">
-   <center><input onclick="checkboxSubmitGroup(studentsArray);" style="font-size: 16px;" type="submit" value="studioCompare Groups">
+   <center><input onclick="checkboxSubmitGroup(studentsArray);" style="font-size: 16px;" type="submit" value="Compare Groups">
    <div id="error_msg" style="font-size: 16px; color: red;"> </div>
    </center>
   </div>
