Fixed Title of VsAverage plot and added icon to oneview

--- a/Learning-Track/LearningTrack/LearningTrack/charts/VsClassAverage.htm
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/VsClassAverage.htm
@@ -18,8 +18,8 @@ $(function () {
 	    
 	    title: {
 	        text: 'Student A vs Class Average',
-	        align: 'right',
-	        x: -80
+	        //align: 'center',
+	        //x: -80
 	    },
 	    
 	    pane: {
